# mqtt2postgres

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  changelog.md  environment.yml  example_main.py  main.py  pyproject.toml
config/: config.yaml  create_db.sql  dc_pg.yaml  environment.yaml
contracts/derived/: tbl_broker_metrics.odcs.yaml  tbl_sensor_temp.odcs.yaml
contracts/raw/: mqtt_broker.odcs.yaml
docker/api/: Dockerfile
docker/db/: Dockerfile  create_db.sql
docs/: aggregate-status-and-quality.md  configuration.md  development-runbook.md  docker.md  ingest-pipeline.md  runtime-behavior.md  secure-broker-howto.md  system-architecture.md  use-cases.md  versioning.md
examples/: docker-run.local.sh  getting_started.py  loop_test.py  odcs-run.local.sh  psql_connect.py  publish_random.local.py  subscribe_simple.py  subscribe_t.py  test_config.yaml
examples/local-stack/: docker-compose.yml  publisher-config.json  subscriber-config.json  subscriber-topics-config.json
examples/mosquitto/: mosquitto.conf
examples/sql/: Target_Table.sql  Target_Table2.sql
experimental_stuff/: async_main2.py  aync_main.py  multiprocessing_main.py
experimental_stuff/forscience/: timetest.py
main/: main.py  timetest.py
other/: CREATE DATABASE staging_mqtt.sql  CREATE TABLE if not exists tbl4cluster1(.sql  README.md
scripts/dev/: capture-mqtt-traffic.sh  query-local-15m-aggregates.sh  query-local-24h-aggregates.sh  query-local-3m-aggregates.sh  query-local-60m-aggregates.sh  query-local-power-energy-reconciliation.sh  query-local-sensor-temp.sh  query-local-topic-overview.sh  query-local-trace-report.sh  reset-local-test-stack.sh  run-local-smoke-test.sh  run-secure-local-smoke-test.sh  start-local-mqtt-broker.sh  start-local-test-stack.sh  stop-local-mqtt-broker.sh  stop-local-test-stack.sh
shellyconfs/: BLU2MQTT4ShellyPlus2PM.js  BLU2MQTT4ShellyWallDisplay.js
source/: broker2db.py  main.py  psql_connect.py
src/apps/: __init__.py
src/broker/: __init__.py  client.py
src/ingest/: __init__.py  (+1 more)
tests/: conftest.py  pgSelectJSONB.sql  test_config.py  test_contracts.py  test_db.py  test_publisher.py  test_runtime_logging.py  test_service.py  test_structure.py  test_tracing.py  test_twin_config.py
(+65 files in other folders)
